test/function/missing_comma_in_parameters.lox
// error: expected ')' after function parameters
// error: expect '}' after block
fn foo(a, b c, d, e, f) {}